k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lalavisit-web
  namespace: lalavisit
  labels:
    app: lalavisit-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: lalavisit-web
